--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-li{
-    
-    display: inline;
-    
+*{
+    font-family: "Nunito", serif;
+}
+
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+nav li {
+    flex: 0.3;
 }
