--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
 
 
 nav ul {
+    font-size: 20px;
     list-style-type: none;
     display: flex;
-    margin-left: 120px;
+	margin-left: 120px;
+	padding-top: 20px;	
 }
 
 nav li {
