--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
-    font-family: "Nunito", serif;
-    background-color: #2A363B;
+* {
+    font-family: "Nunito", serif;  
+    background-color: #ff8aac;
 }
 
 
