--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
-    font-family: "Nunito", serif;  
-    background-color: #ff8aac;
+    font-family: "Nunito", serif;
+    background-color: #000000;
+    color: cornsilk;
 }
 
 
