--- a/css/css_occasions.css
+++ b/css/css_occasions.css
@@ -26,11 +26,12 @@ nav li {
 }
 
 .voiture1-detail{
+    font-size: 25px;
 }
 
 .voiture2-detail{
-
+    font-size: 25px;
 }
 .voiture3-detail{
-
+    font-size: 25px;
 }
